recursion.logo.tree.Tree.scala.error
Erreur de compilation :
Tree:24: error: ';' expected but 'else' found.
  else {
  ^